# firmware

./: .gitignore  README.md  changelog.md  documentation.md  pyproject.toml
Data Format Spec/: air_cube_data.csv  data_send.json  data_send_sensor_community.json  full_details.json
LICENSES/: adafruit_ahtx0_LICENSE.txt  adafruit_ble_LICENSE.txt  adafruit_bmp280_LICENSE.txt  adafruit_connection_manager_LICENSE.txt  adafruit_logging_LICENSE.txt  adafruit_max1704x_LICENSE.txt  adafruit_pixelbuf_LICENSE.txt  adafruit_requests_LICENSE.txt  adafruit_scd4x_LICENSE.txt  adafruit_sht31d_LICENSE.txt  adafruit_sht4x_LICENSE.txt  cptoml_LICENSE.txt  neopixel_LICENSE.txt  sensirion_i2c_driver_LICENSE.txt  sensirion_i2c_sen5x_LICENSE.txt
deploy/: deploy.ipynb  notebook_env.py  pyproject.toml  readme.md  settings.toml  utils.py
docs/: api-json.md  ble-characteristics.md  companion-app-mqtt-ble.md  led-codes.md  mqtt-home-assistant.md  settings.md  ugm.md
firmware/: .gitignore  ble_config_tlv.py  ble_status.py  boot.toml  code.py  config.py  enums.py  firmware_upgrade_manager.py  ld_service.py  led_controller.py  logger.py  main.py  measurement_temp_queue.py  mqtt_ble_tlv.py  mqtt_ha.py  readme.md  sd_ble_export.py  sd_logger.py  sensors.toml  sensors_config.py  sensors_toml_ids.py  settings.toml  startup.toml  startup_actions.py  tz_format.py  update.py  upgrade_mananger.py  util.py  wifi_client.py
flash_scripts/: flash.bash  flash1.bash  flash2.bash  settings.toml  update0.bash  update1.bash  update2.bash
tests/: test_ps1_no2.py  test_sensors_toml.py
tools/: deploy.ipynb  (+7 more)
(+63 files in other folders)
