[project]
name = "firmware-deploy"
version = "0.1.0"
description = "Tools to flash CircuitPython (esptool) and copy firmware to CIRCUITPY"
readme = "deploy/readme.md"
requires-python = ">=3.10"
dependencies = [
    "circup>=3.0.1",
    "esptool>=4.0",
    "jupyter",
    "pyserial",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "tqdm>=4.66",
]
